--- a/manifest.json
+++ b/manifest.json
@@ -40,5 +40,39 @@
     "src": "https://lh6.googleusercontent.com/-mnXlQwgItNQ/Xxey3s8po8I/AAAAAAAAJ94/iPjdv-rvSRgJWJPFsNy8Eimas76OY40MgCNcBGAsYHQ/s512/nln-512.png",
     "sizes": "512x512",
       "purpose": "any maskable"
-  }]
+  }],
+    "start_url": "https://www.ngonluanho.net/?utm_source=homescreen",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#ffffff",
+    "share_target": {
+        "action": "/share-target/",
+        "params": {
+            "title": "title",
+            "text": "text",
+            "url": "url"
+        }
+    },
+    "shortcuts": [ {
+        "name": "bài đăng mới nhất",
+        "description": "bài đăng mới nhất",
+        "url": "https://www.ngonluanho.net/search/",
+        "icons": [ {
+            "src": "https://lh6.googleusercontent.com/-tKaYjbatwL8/Xxe0-07J0GI/AAAAAAAAJ-E/ur0nSU2w8HUf3CZfaO84Sf_1URf4n557ACNcBGAsYHQ/s144/nln-192px.png",
+            "type": "image/png",
+            "sizes": "144x144",
+            "purpose": "any"
+        } ]
+    }, {
+        "name": "liên lạc",
+        "description": "liên lạc với chúng tôi",
+        "url": "https://www.ngonluanho.net/p/lien-lac.html/",
+        "icons": [ {
+            "src": "https://lh6.googleusercontent.com/-tKaYjbatwL8/Xxe0-07J0GI/AAAAAAAAJ-E/ur0nSU2w8HUf3CZfaO84Sf_1URf4n557ACNcBGAsYHQ/s144/nln-192px.png",
+            "type": "image/png",
+            "sizes": "144x144",
+            "purpose": "any"
+        } ]
+    } ]
 }
+
